--- a/views/logs.jade
+++ b/views/logs.jade
@@ -35,7 +35,7 @@ html
       color:white;
       border-radius:10px;
       margin-left:20px;
-    }
+    } 
   body 
     div 
       .container
@@ -43,6 +43,6 @@ html
         a(href="/") main page 
           each val in listLog 
             div.listContainer 
-              p= val.time +" "+ val.nrp +" "+val.status  
+              p= val.log_time +" "+ val.log_nrp +" "+val.log_gate  
           
         a(href="/") main page 
